--- a/pages/search/index.wxss
+++ b/pages/search/index.wxss
@@ -7,6 +7,7 @@
   margin: 24rpx auto;
   position: relative;
 }
+
 .search image {
   position: absolute;
   left:24rpx;
@@ -14,6 +15,7 @@
   top: 10rpx;
   height: 42rpx;
 }
+
 .search input {
   width: 456rpx;
   position: absolute;
@@ -21,10 +23,13 @@
   left:94rpx;
   font-size: 26rpx;
 }
+
 .courseList {
   padding: 0 26rpx;
   height: 50rpx;
+  z-index: 999em;
 }
+
 .listItem{
   display: flex;
   align-items: center;
@@ -32,9 +37,48 @@
   border-bottom: 1rpx solid #BFBFBF ;
   height: 72rpx;
 }
+
 .listItem image {
   width: 42rpx;
   height: 42rpx;
   margin-left: 14rpx;
   margin-right: 26rpx;
+}
+
+.history {
+   margin:20rpx 64rpx 0;
+   position: relative;
+}
+
+.history .tip {
+  font-size: 22rpx;
+  color: #333333;
+  margin-bottom: 40rpx;
+}
+
+.history .clear {
+   position: absolute;
+   right: 10rpx;
+   top:15rpx;
+   font-size: 22rpx;
+   color: #333333;
+}
+
+.history .list {
+  margin-top: 40rpx;
+  display: flex;
+  flex-wrap: wrap;
+}
+.list > .item {
+ padding:10rpx 26rpx;
+  height: 44rpx;
+  line-height: 44rpx;
+  color: #333333;
+  background-color: #DCDCDC;
+  font-size:24rpx;
+font-family:PingFang SC;
+font-weight:400;
+border-radius: 34rpx;
+margin-right: 44rpx;
+margin-bottom: 24rpx;
 }
