修改试卷正确率显示以及真机不能正常渲染试卷的问题

--- a/components/sectionlist/index.wxss
+++ b/components/sectionlist/index.wxss
@@ -42,14 +42,19 @@
   margin-left: 30rpx;
   font-size: 20rpx;
 }
-.test-papers {
+.scroll {
   position: absolute;
-  width: 586rpx;
-  height: 74rpx;
   bottom: 36rpx;
   left: 62rpx;
-  display: flex;
-  justify-content: flex-start;
+}
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+}
+.test-papers {
+  width: 586rpx;
+  height: 74rpx;
   white-space: nowrap;
 }
 .test-item {
