--- a/pages/detect/index.wxss
+++ b/pages/detect/index.wxss
@@ -13,7 +13,12 @@ page {
     height: 296rpx;
     width: 100%;
 }
-
+.swiper-item {
+    height: 296rpx;
+    width: 100%;
+    line-height: 296rpx;
+    text-align: center;
+}
 .banner {
     width: 100%;
     height: 294rpx;
@@ -114,7 +119,7 @@ page {
     padding-bottom: 20rpx;
 }
 
-.p-container .section-list .sec-wrap {
+.p-container .section-list .sec-wraps {
     width: 705rpx;
     margin: 0 auto 15rpx;
 }
