--- a/pages/customize/index.wxml
+++ b/pages/customize/index.wxml
@@ -28,17 +28,18 @@
     <image src="/assets/pic/Image.png" />
     <text class="recommendText">检测推荐</text>
     <view class="search">
-      <input type="text" placeholder="课程搜索" bindtap="toSearch"/>
+      <input type="text" bindtap="toSearch"/>
       <image src="/assets/icon/sousuo.png" />
     </view>
   </view>
-  <block wx:for="{{descourseList}}" wx:key="{{item.courseId}}">
-    <s-descourse courseId="{{item.courseId}}" group-info="{{item['groupInfo']}}" 
+  <block wx:for="{{descourseList}}" wx:key="id">
+    <s-descourse courseId="{{item.id}}" group-info="{{item['groupInfo']}}" 
       title="{{item.courseName}}"    
       section="{{item.knowledgePoint}}" course-duration="{{item.courseDuration}}" teacherName="{{item.teacherName}}"
       teacherImage="{{item.teacherAvatar?item.teacherAvatar:'/assets/icon/pic.png'}}"
       sales="{{item['sales']}}" section="{{item['section']}}"
       courseImage="{{item.courseCoverUrl}}" stars="{{item.courseStars}}"
-      price="{{item.coursePrice}}"/>
+      price="{{item.coursePrice}}" 
+      videoId="{{item.ossVideoId}}"/>
   </block>
 </view>
