--- a/components/descourse/index.wxss
+++ b/components/descourse/index.wxss
@@ -47,7 +47,7 @@ display: flex;
 margin-top: 22rpx;
 align-items: center;
 }
-.teacher image {
+.teacher .img {
  height: 50rpx;
  width: 50rpx;
  border-radius: 50%;
