--- a/pages/publicinfo/index.wxss
+++ b/pages/publicinfo/index.wxss
@@ -42,7 +42,7 @@ page {
 
 .produceInfo {
   margin: 32rpx auto 0;
-  height: 600rpx;
+  height: 400rpx;
   width: 606rpx;
   border-radius: 10rpx;
   padding: 0 50rpx;
@@ -231,4 +231,31 @@ color: transparent;
   width: 100%;
   height: 100%;
   border-radius: 50%;
+}
+
+.item {
+  width: 600rpx;
+  height: 103rpx;
+  margin: 40rpx auto;
+  border-radius: 12rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  width: 33rpx;
+  height: 33rpx;
+  margin: 35rpx;
+  flex-basis: 15px;
+}
+
+.txt {
+  font-size: 28rpx;
+  color: #fff;
+  display: inline-block;
+  flex: 1;
+  /* margin-left: 36rpx; */
+  /* vertical-align: top; */
 }
