--- a/pages/detect/index.wxss
+++ b/pages/detect/index.wxss
@@ -52,7 +52,10 @@ page {
     z-index: -1;
 }
 
-
+.lbt {
+    width: 100%;
+    height: 296rpx;
+}
 
 .header .chapter .txt {
     font-weight: bold;
