--- a/pages/search/index.wxml
+++ b/pages/search/index.wxml
@@ -28,4 +28,6 @@
        <view class="item" wx:for="{{storageList}}" wx:key="index" bindtap="showCourse" data-item="{{item}}">{{item}}</view>
      </view>
  </view>
+
+ <view class="noSearchData" wx:if="{{searchFlag}}">抱歉！没有查询到你想要搜索的内容，请换个关键词试试。</view>
  
