--- a/pages/exam/index.wxml
+++ b/pages/exam/index.wxml
@@ -45,7 +45,7 @@
                   data-index="{{ index }}" bindtap="getUserAnswer"
                 >{{choosedTopicIndex===index && topicsList[currentTopicIndex]['userAnswer'] === index + 1 && topicsList[currentTopicIndex]['judgeResult'] === 1 ? '✔':item}}</view>
                
-               <view wx:else class="btn-item {{ choosedTopicIndex===index?'active':'abc' }}" data-index="{{ index }}" bindtap="getUserAnswer"> {{choosedTopicIndex===index ? '✔':item}} </view>
+               <view wx:else class="btn-item {{ choosedTopicIndex===index?'active':'abc' }}" data-index="{{ index }}" bindtap="getUserAnswer"> {{item}} </view>
               </block>
             </view>
           </view>
