--- a/pages/freecourse/index.wxml
+++ b/pages/freecourse/index.wxml
@@ -5,8 +5,8 @@
       title="{{item.courseName}}"    
       section="{{item.knowledgePoint}}" course-duration="{{item.courseDuration}}" teacherName="{{item.teacherName}}"
       teacherImage="{{item.teacherAvatar?item.teacherAvatar:'/assets/icon/pic.png'}}"
-      sales="{{item['sales']}}" section="{{item['section']}}"
+      sales="{{item['courseSales']}}" section="{{item['section']}}"
       courseImage="{{item.courseAvatar}}" stars="{{item.courseStars}}"
-      price="0.00"/>
+      price="{{item.coursePrice}}"  videoId="{{item.ossVideoId}}"/>
   </block>
 </view>
