--- a/pages/publicinfo/index.wxml
+++ b/pages/publicinfo/index.wxml
@@ -30,14 +30,15 @@
   <block wx:if="{{similarFlag}}">
   <view class="sameCourse" bindtap="toSameCourse">同类课程  》</view>
   <block wx:for="{{sameCourse}}" wx:key="id">
-    <s-descourse courseId="{{item.courseId}}" group-info="{{item['groupInfo']}}" title="{{item.courseName}}" section="{{item.knowledgePoint}}" course-duration="{{item.courseDuration}}" teacherName="{{item.teacherName}}" teacherImage="{{item.teacherAvatar?item.teacherAvatar:'/assets/icon/pic.png'}}" sales="{{item['sales']}}" section="{{item['section']}}" courseImage="{{item.courseAvatar}}" stars="{{item.courseStars}}" price="{{item.coursePrice}}" />
+    <s-descourse courseId="{{item.courseId}}" group-info="{{item['groupInfo']}}" title="{{item.courseName}}" section="{{item.knowledgePoint}}" course-duration="{{item.courseDuration}}" teacherName="{{item.teacherName}}" teacherImage="{{item.teacherAvatar?item.teacherAvatar:'/assets/icon/pic.png'}}" sales="{{item['courseSales']}}" section="{{item['section']}}" courseImage="{{item.courseAvatar}}" stars="{{item.courseStars}}" price="{{item.coursePrice}}"  videoId="{{item.ossVideoId}}"/>
   </block>
 </block>
 
 <block wx:if="{{freeFlag}}">
   <view class="freeCourse" bindtap="toFreeCourse">免费区  》</view>
   <block wx:for="{{freeCourse}}" wx:key="id">
-    <s-descourse courseId="{{item.courseId}}" group-info="{{item['groupInfo']}}" title="{{item.courseName}}" section="{{item.knowledgePoint}}" course-duration="{{item.courseDuration}}" teacherName="{{item.teacherName}}" teacherImage="{{item.teacherAvatar?item.teacherAvatar:'/assets/icon/pic.png'}}" sales="{{item['sales']}}" section="{{item['section']}}" courseImage="{{item.courseAvatar}}" stars="{{item.courseStars}}" price="{{0.0}}" />
+    <s-descourse courseId="{{item.courseId}}" group-info="{{item['groupInfo']}}" title="{{item.courseName}}" section="{{item.knowledgePoint}}" course-duration="{{item.courseDuration}}" teacherName="{{item.teacherName}}" teacherImage="{{item.teacherAvatar?item.teacherAvatar:'/assets/icon/pic.png'}}" sales="{{item['courseSales']}}" section="{{item['section']}}" courseImage="{{item.courseAvatar}}" stars="{{item.courseStars}}" 
+    price="{{item.coursePrice}}" videoId="{{item.ossVideoId}}"/>
   </block>
 </block>
 </view>
